--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/eduardovaillant/twitter-parser#readme",
   "devDependencies": {
     "@shelf/jest-mongodb": "^2.0.1",
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -47,7 +48,11 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "module-alias": "^2.2.2"
+    "@types/mongodb": "^3.6.20",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "module-alias": "^2.2.2",
+    "mongodb": "^4.0.0"
   },
   "_moduleAliases": {
     "@": "dist"
